Fix CSS bug: Scrollbar at bottom

--- a/css/login.css
+++ b/css/login.css
@@ -11,7 +11,7 @@ h1 {
 #login-box {
   border-radius: 15px;
   border: 2px solid black;
-  margin: 10px;
+  /* margin: 10px; */
 }
 
 #login-text {
